welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: type Arrayt
	var T=new Arrayt[Int](num+1)
                  ^